--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-server.port=${PORT:8080}\
-  spring.application.name=internship-api
+server.port=${PORT:8080}
+spring.application.name=internship-api
